@@ -270,6 +270,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S530D  (EXPERIMENTAL)
        Canon   BJC S630   (EXPERIMENTAL)
        Canon   BJC S750   (EXPERIMENTAL)
+       Canon   BJC S820   (EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
